; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/setupapi/extr_install.c_get_field_string.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/setupapi/extr_install.c_get_field_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR_INSUFFICIENT_BUFFER = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32, i32*, i32*, i32*)* @get_field_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_field_string(i32* %0, i32 %1, i32* %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = load i32, i32* %8, align 4
  %15 = load i32*, i32** %9, align 8
  %16 = load i32*, i32** %11, align 8
  %17 = load i32, i32* %16, align 4
  %18 = call i64 @SetupGetStringFieldW(i32* %13, i32 %14, i32* %15, i32 %17, i32* %12)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %5
  %21 = load i32*, i32** %9, align 8
  store i32* %21, i32** %6, align 8
  br label %65

22:                                               ; preds = %5
  %23 = call i64 (...) @GetLastError()
  %24 = load i64, i64* @ERROR_INSUFFICIENT_BUFFER, align 8
  %25 = icmp eq i64 %23, %24
  br i1 %25, label %26, label %56

26:                                               ; preds = %22
  %27 = load i32*, i32** %9, align 8
  %28 = load i32*, i32** %10, align 8
  %29 = icmp ne i32* %27, %28
  br i1 %29, label %30, label %34

30:                                               ; preds = %26
  %31 = call i32 (...) @GetProcessHeap()
  %32 = load i32*, i32** %9, align 8
  %33 = call i32 @HeapFree(i32 %31, i32 0, i32* %32)
  br label %34

34:                                               ; preds = %30, %26
  %35 = call i32 (...) @GetProcessHeap()
  %36 = load i32, i32* %12, align 4
  %37 = sext i32 %36 to i64
  %38 = mul i64 %37, 4
  %39 = trunc i64 %38 to i32
  %40 = call i32* @HeapAlloc(i32 %35, i32 0, i32 %39)
  store i32* %40, i32** %9, align 8
  %41 = icmp ne i32* %40, null
  br i1 %41, label %43, label %42

42:                                               ; preds = %34
  store i32* null, i32** %6, align 8
  br label %65

43:                                               ; preds = %34
  %44 = load i32, i32* %12, align 4
  %45 = load i32*, i32** %11, align 8
  store i32 %44, i32* %45, align 4
  %46 = load i32*, i32** %7, align 8
  %47 = load i32, i32* %8, align 4
  %48 = load i32*, i32** %9, align 8
  %49 = load i32*, i32** %11, align 8
  %50 = load i32, i32* %49, align 4
  %51 = call i64 @SetupGetStringFieldW(i32* %46, i32 %47, i32* %48, i32 %50, i32* %12)
  %52 = icmp ne i64 %51, 0
  br i1 %52, label %53, label %55

53:                                               ; preds = %43
  %54 = load i32*, i32** %9, align 8
  store i32* %54, i32** %6, align 8
  br label %65

55:                                               ; preds = %43
  br label %56

56:                                               ; preds = %55, %22
  %57 = load i32*, i32** %9, align 8
  %58 = load i32*, i32** %10, align 8
  %59 = icmp ne i32* %57, %58
  br i1 %59, label %60, label %64

60:                                               ; preds = %56
  %61 = call i32 (...) @GetProcessHeap()
  %62 = load i32*, i32** %9, align 8
  %63 = call i32 @HeapFree(i32 %61, i32 0, i32* %62)
  br label %64

64:                                               ; preds = %60, %56
  store i32* null, i32** %6, align 8
  br label %65

65:                                               ; preds = %64, %53, %42, %20
  %66 = load i32*, i32** %6, align 8
  ret i32* %66
}

declare dso_local i64 @SetupGetStringFieldW(i32*, i32, i32*, i32, i32*) #1

declare dso_local i64 @GetLastError(...) #1

declare dso_local i32 @HeapFree(i32, i32, i32*) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i32* @HeapAlloc(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
